--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
     <!-- endbuild -->
 
     <link href="https://fonts.googleapis.com/css?family=Grand+Hotel|Roboto+Slab:400,300" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="http://example.com/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- META -->
     <meta property="og:title" content="esformatter plugin registry">
