--- a/src/index.html
+++ b/src/index.html
@@ -21,8 +21,12 @@
 </head>
 
 <body ng-controller="PluginListCtrl" class="good-font">
+    <a class="github-ribbon" href="https://github.com/pgilad/esformatter-plugins">
+        <img style="position: fixed; top: 0; right: 0; border: 0; z-index:50" src="https://camo.githubusercontent.com/a6677b08c955af8400f44c6298f40e7d19cc5b2d/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67"
+        alt='Fork me on GitHub' data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_gray_6d6d6d.png">
+    </a>
     <nav class="fixed-title" role="navigation">
-        <a class="logo" href="http://esformatterjs.com/" role="banner">esformatter</a>
+        <a class="logo" href="https://github.com/millermedeiros/esformatter" role="banner">esformatter</a>
         <input ng-change="limit=15" type="search" role="search" class="ng-cloak good-font plugin-search" placeholder="Search {{ data.length }} plugins..." ng-model="search" autofocus>
     </nav>
 
